# bnm-fast

./: .flake8  .gitignore  pyproject.toml  scrapy.cfg
bnm_fast/: __main__.py  data.py  download.py  transform.py
bnm_fast_data/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
src/: common.py  data.py  download.py  excel.py  flatten.py  main.py
tests/: test_data.py  test_download.py  test_main.py  test_merge.py
xml/: 200500000018-01032006-00000047-Government Securities (Conventional)-01032006.xml  200500000018-01032007-00000056-Government Securities (Conventional)-01032007.xml  200500000018-01062006-00000047-Government Securities (Conventional)-01062006.xml  200500000018-01062007-00000056-Government Securities (Conventional)-01062007.xml  200500000018-01082005-00000040-Government Securities (Conventional)-01082005.xml  200500000018-01082006-00000050-Government Securities (Conventional)-01082006.xml  200500000018-01092005-00000040-Government Securities (Conventional)-01092005.xml  200500000018-01092006-00000050-Government Securities (Conventional)-01092006.xml  200500000018-01112006-00000050-Government Securities (Conventional)-01112006.xml  200500000018-01122005-00000047-Government Securities (Conventional)-01122005.xml  200500000018-01122006-00000050-Government Securities (Conventional)-01122006.xml  200500000018-02022007-00000050-Government Securities (Conventional)-02022007.xml  200500000018-02032006-00000047-Government Securities (Conventional)-02032006.xml  200500000018-02032007-00000056-Government Securities (Conventional)-02032007.xml  (+11233 more)
(+4 files in other folders)
