[tool.poetry]
name = "bnm-fast-data"
version = "0.1.0"
description = "A tool to scrape Bank Negara Malaysia FAST (i.e. fixed income) data."
authors = ["Tan Jiann Meng <jiannmeng@fi.life>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.7.0"
beautifulsoup4 = "^4.10.0"
httpx = "^0.19.0"

[tool.poetry.dev-dependencies]
rope = "^0.19.0"
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
